syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscoding";
import "Protos/google/api/annotations.proto";
option go_package = "proto/follower";
import "google/protobuf/timestamp.proto";

service Follower {
    rpc CreateNewFollowing(UserFollowingDto) returns (NeoFollowerDto) {
    option (google.api.http) = {
      post: "/api/follower/followers/{userId}/{followerId}"
      body: "*"
    };
    }

    rpc GetUserRecommendations(id) returns (ListNeoUserDto) {
    option (google.api.http) = {
      get: "/api/follower/getAllRecomodations/{Id}"
    };
    }

    rpc GetFollowingsWithBlogs(id) returns (ListBlogPostDto) {
    option (google.api.http) = {
      get: "/api/follower/getFollowings/{Id}"
    };
    }

    rpc FindUserFollowings(id) returns (ListNeoUserDto) {
    option (google.api.http) = {
      get: "/api/follower/findUserFollowings/{Id}" 
    };
    }
   
}


message UserFollowingDto {
     int32 userId=1;
     int32 followerId=2;
}

message NeoFollowerDto {
    string userId=1;
    string username=2;
    string followingUserId=3;
    string followingUsername=4;
}

message NeoUserDto {
    int32 id=1;
    string username=2;
}


message BlogPostDto {
    int32 id=1;
    int32 authorId=2;
    int32 tourId=3;
    string authorUsername=4;
    string title=5;
    string description=6;
    google.protobuf.Timestamp creationDate=7; 
    repeated string imageURLs=8;
    repeated BlogPostCommentDto comments=9;
    repeated BlogPostRatingDto ratings=10;
    string status=11;
}

message BlogPostCommentDto {
    string text=1;
    int32 userId=2;
    string username=3;
    google.protobuf.Timestamp creationTime=4;
    google.protobuf.Timestamp lastUpdatedTime=5;
}

message BlogPostRatingDto {
    bool isPositive=1;
    google.protobuf.Timestamp creationTime=2;
    int32 userId=3;
}

message id {
    int32 Id=1;
}

message ListBlogPostDto {
    repeated BlogPostDto ResponseList=1 ;
}

message ListNeoUserDto {
    repeated NeoUserDto ResponseList=1 ;
}
